Archive/5398cbeaa3da29eb61fec19f64fa96b1-e19d71fa08eccc4d0e009103f5dda438/output
main.cpp:1:1: error: 'aabbdd' does not name a type
 aabbdd
 ^
